# whispo

./: .gitignore  README.md  components.json  dev-app-update.yml  electron-builder.config.cjs  electron.vite.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.github/workflows/: release.yml
scripts/: build-debian.sh  build-rdev.sh  build-rs.sh  fix-pnpm-windows.js  release.js
src/main/: config.ts  index.ts  keyboard.ts  llm.ts  menu.ts  renderer-handlers.ts  serve.ts  state.ts  tipc.ts  tray.ts  updater.ts  utils.ts  window.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx  router.tsx
src/renderer/src/components/: app-layout.tsx  setup.tsx  updater.tsx
src/renderer/src/components/ui/: button.tsx  control.tsx  dialog.tsx  input.tsx  select.tsx  spinner.tsx  switch.tsx  textarea.tsx
src/renderer/src/css/: tailwind.css
src/renderer/src/lib/: event-emitter.d.ts  event-emitter.js  query-client.ts  recorder.ts  sound.ts  tipc-client.ts
src/renderer/src/pages/: index.tsx  panel.tsx  settings-about.tsx  settings-data.tsx  settings-general.tsx  settings-providers.tsx  settings.tsx  setup.tsx
src/shared/: index.ts  shims.d.ts  types.ts
whispo-rdev/: Cargo.toml
whispo-rdev/src/: main.rs
whispo-rs/: Cargo.toml
whispo-rs/src/: main.rs
