[package]
name = "whispo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.3.0"
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
futures-util = "0.3"

[features]
wayland = []

[profile.release]
strip = true
